# icebreaker

./: .gitignore  pyproject.toml
.github/workflows/: release.yml  test.yml
docs/icebreaker/cli/: index.md
docs/icebreaker/versioning/: index.md
scripts/: fmt  package-sdist  package-wheel  publish-sdist  publish-wheel  setup  test-acceptance  test-functional  test-performance  test-property  test-security  test-smoke  test-unit
src/icebreaker/: __main__.py
src/icebreaker/_cli/: _cli.py
src/icebreaker/_cli/commands/: fmt.py  version.py
src/icebreaker/_internal/code_quality/: __init__.py  _formatter.py  _mypy_type_checker.py  _ruff_formatter.py  _type_checker.py
src/icebreaker/_internal/formatting/: __init__.py  _formatter.py  _ruff_formatter.py
src/icebreaker/_internal/interfaces/: __init__.py
src/icebreaker/_internal/typing/: __init__.py  _type_checker.py
src/icebreaker/store/: __init__.py  _main.py
src/icebreaker/store_backends/env_var/: __init__.py  _main.py
src/icebreaker/store_backends/env_vars/: __init__.py  _main.py
src/icebreaker/store_backends/memory/: __init__.py  _main.py
src/icebreaker/testing/: __init__.py  _test_code_formatting.py  _test_code_typing.py
src/icebreaker/versioning/: _version_file_based.py
tests/acceptance/tests/: test_code_style.py
tests/functional/: conftest.py
tests/functional/decorators/: __init__.py  _skip_on.py
tests/functional/fixtures/: env_var_store_backend.py  env_vars_store_backend.py  memory_store_backend.py  store.py  store_backend.py
tests/smoke/tests/: test_cli.py
tests/unit/: test_noop.py
(+11 files in other folders)
