[project]
name = "arktika-icebreaker"
description = "Software Dev Kit"
authors = [{name = "Arktika", email = "oss@arktika.io"}]
dynamic = ["version"]
requires-python = ">=3.12"
dependencies = []
readme = "README.md"
license = { file = "LICENSE" }

[project.urls]
"Homepage" = "https://github.com/arktika-io/icebreaker"
"Source Code" = "https://github.com/arktika-io/icebreaker"
"Documentation" = "https://github.com/arktika-io/icebreaker/docs"
"Changelog" = "https://github.com/arktika-io/icebreaker/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/arktika-io/icebreaker/issues"

[project.optional-dependencies]
dev = [
    "hypothesis==6.*",
    "pydantic==2.*",
    "pytest==7.*",
    "pytest-asyncio==0.*",
]

cli = [
    "ruff==0.*"
]

testing = [
    "ruff==0.*",
    "mypy==1.*"
]

[project.scripts]
icebreaker = "icebreaker.__main__:main"

[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools==75.*",
    "wheel==0.*",
]

[tool.setuptools.package-data]
"*" = ["*"]

[tool.setuptools.dynamic]
version = {file = "version"}

[tool.mypy]
plugins = ["pydantic.mypy"]
